@@ -121,6 +121,13 @@ Tools/Demos
   Updated for test discovery by Mark Roddy and Python 3 compatibility by
   Brian Curtin.
 
+Tests
+-----
+
+- Issue #6293: Have regrtest.py echo back sys.flags.  This is done by default
+  in whole runs and enabled selectively using ``--header`` when running an
+  explicit list of tests.  Original patch by Collin Winter.
+
 
 What's New in Python 3.2 Beta 2?
 ================================
